--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,7 @@ manifest.mf
 run/
 
 build-data/
-Tentacles-API
-Tentacles-MojangAPI
-Tentacles-Server
+Leaf-API
+Leaf-MojangAPI
+Leaf-Server
 *.jar
