--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -1,18 +1,20 @@
 name: Upstream
 on:
-  schedule:
-    - cron: "*/15 * * * *"
+  workflow_dispatch:
+
 jobs:
   upstream:
     runs-on: ubuntu-latest
     if: "!contains(github.event.commits[0].message, '[ci-skip]')"
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: gradle/wrapper-validation-action@v1
-      - uses: actions/setup-java@v2
+      - uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 17
+      - name: Grant execute permission for gradlew
+        run: chmod +x scripts/
       - name: Configure Git
         run: git config --global user.email "action@github.com" && git config --global user.name "Github Action"
       - name: Update upstream
