--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,4 +24,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: Leaf
-          path: build/libs
+          path: build/libs/leaf-paperclip-1.19-R0.1-SNAPSHOT-reobf.jar
