--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group = org.dreeam.leaf
-version = 1.19.1-R0.1-SNAPSHOT
+version = 1.19.2-R0.1-SNAPSHOT
 
-purpurCommit = 2e38d4bcb389f4f278c89f31459903716696b768
+pufferfishCommit = 4882a952ea5fcb12cf6f8f164a8010fc2f85a25c
 
 org.gradle.caching = true
 org.gradle.parallel = true
