Change to Pufferfish

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group = org.dreeam.leaf
 version = 1.19-R0.1-SNAPSHOT
 
-purpurCommit = 2b3486efc2478cb2be0a0b3eaeedbee9154303cc
+pufferfishCommit = 37f936f0b89395c6b59b08f4695525096c9a888b
 
 org.gradle.caching = true
 org.gradle.parallel = true
