--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ on: [ push, pull_request ]
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: "!contains(github.event.commits[0].message, '[ci-skip]')"
     steps:
       - uses: actions/checkout@v3
       - uses: gradle/wrapper-validation-action@v1
@@ -24,4 +25,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: Leaf
-          path: build/libs/leaf-paperclip-1.19-R0.1-SNAPSHOT-reobf.jar
+          path: build/libs/leaf-paperclip-1.19.1-R0.1-SNAPSHOT-reobf.jar
