--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group = org.dreeam.leaf
 version = 1.19.2-R0.1-SNAPSHOT
 
-pufferfishCommit = 58865aa0d59aa6f459d4256f78917e97428a6124
+MiraiCommit = 61ab92696067bd4c4db472cb4f767ac2536c33f2
 
 org.gradle.caching = true
 org.gradle.parallel = true
