--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group = org.dreeam.leaf
 version = 1.19.2-R0.1-SNAPSHOT
 
-pufferfishCommit = 58865aa0d59aa6f459d4256f78917e97428a6124
+PrismarineCommit = 6ec631b829b7ee535e8f3c165175c29423e6f7d1
 
 org.gradle.caching = true
 org.gradle.parallel = true
