--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Leaf
+name: Build LeafPrismarine-1.19.2
 on: [ push, pull_request ]
 jobs:
   build:
@@ -19,8 +19,8 @@ jobs:
         run: ./gradlew applyPatches --stacktrace
       - name: Create ReobfPaperclipJar
         run: ./gradlew createReobfPaperclipJar --stacktrace
-      - name: Upload Leaf
+      - name: Upload LeafPrismarine
         uses: actions/upload-artifact@v3
         with:
-          name: Leaf
-          path: build/libs/leaf-paperclip-1.19.2-R0.1-SNAPSHOT-reobf.jar
+          name: LeafPrismarine-1.19.2
+          path: build/libs/leafprismarine-paperclip-1.19.2-R0.1-SNAPSHOT-reobf.jar
