--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,10 +3,9 @@ on: [ push, pull_request ]
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: "!contains(github.event.commits[0].message, '[ci-skip]')"
     steps:
       - uses: actions/checkout@v3
-      - uses: gradle/wrapper-validation-action@v1
+      - uses: gradle/wrapper-validation-action@master
       - uses: actions/setup-java@v3
         with:
           distribution: temurin
@@ -19,8 +18,10 @@ jobs:
         run: ./gradlew applyPatches --stacktrace
       - name: Create ReobfPaperclipJar
         run: ./gradlew createReobfPaperclipJar --stacktrace
+      - name: Rename Paperclip Jar
+        run: mv build/libs/leaf-paperclip-1.19.2-R0.1-SNAPSHOT-reobf.jar ./leaf-1.19.2.jar
       - name: Upload Leaf
         uses: actions/upload-artifact@v3
         with:
           name: Leaf
-          path: build/libs/leaf-paperclip-1.19.2-R0.1-SNAPSHOT-reobf.jar
+          path: ./leaf-1.19.2.jar
