--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Leaf
+name: Build LeafKeYi-1.19.2
 on: [ push, pull_request ]
 jobs:
   build:
@@ -19,9 +19,9 @@ jobs:
       - name: Create ReobfPaperclipJar
         run: ./gradlew createReobfPaperclipJar --stacktrace
       - name: Rename Paperclip Jar
-        run: mv build/libs/leaf-paperclip-1.19.2-R0.1-SNAPSHOT-reobf.jar ./leaf-1.19.2.jar
-      - name: Upload Leaf
+        run: mv build/libs/leafkeyi-paperclip-1.19.2-R0.1-SNAPSHOT-reobf.jar ./leafkeyi-1.19.2.jar
+      - name: Upload LeafKeYi
         uses: actions/upload-artifact@v3
         with:
           name: Leaf
-          path: ./leaf-1.19.2.jar
+          path: ./leafkeyi-1.19.2.jar
