--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group = org.dreeam.leaf
 version = 1.19.2-R0.1-SNAPSHOT
 
-pufferfishCommit = deb9638cd5243286685c20d254fdec9c2754979b
+KeYiCommit = 15e10f23754c48dfbe98b5c22f8090cb8332ba3b
 
 org.gradle.caching = true
 org.gradle.parallel = true
