--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group = org.dreeam.leaf
 version = 1.19.2-R0.1-SNAPSHOT
 
-pufferfishCommit = deb9638cd5243286685c20d254fdec9c2754979b
+PaperCommit = fc9ee65a32622d03a91db39364b6f106cf88335b
 
 org.gradle.caching = true
 org.gradle.parallel = true
