--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,19 +6,21 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: gradle/wrapper-validation-action@master
-      - uses: actions/setup-java@v3
+      - name: Set up JDK
+        uses: graalvm/setup-graalvm@v1
         with:
-          distribution: temurin
-          java-version: 17
+          version: "latest"
+          java-version: 19
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
           cache: gradle
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Configure Git
         run: git config --global user.email "no-reply@github.com" && git config --global user.name "Github Actions"
       - name: Apply patches
-        run: ./gradlew applyPatches --stacktrace
+        run: ./gradlew -Dorg.gradle.jvmargs="-Dgraal.CompilerConfiguration=enterprise -Dgraal.UsePriorityInlining=true -Dgraal.Vectorization=true -Dgraal.OptDuplication=true --add-modules jdk.incubator.vector" applyPatches --stacktrace --no-daemon
       - name: Create ReobfPaperclipJar
-        run: ./gradlew createReobfPaperclipJar --stacktrace
+        run: ./gradlew -Dorg.gradle.jvmargs="-Dgraal.CompilerConfiguration=enterprise -Dgraal.UsePriorityInlining=true -Dgraal.Vectorization=true -Dgraal.OptDuplication=true --add-modules jdk.incubator.vector" createReobfPaperclipJar --stacktrace --no-daemon
       - name: Rename Paperclip Jar
         run: mv build/libs/leafkeyi-paperclip-1.19.2-R0.1-SNAPSHOT-reobf.jar ./leafkeyi-1.19.2.jar
       - name: Upload LeafKeYi
