Updated Upstream (Prismarine & Paper)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Rename Paperclip Jar
         run: mv build/libs/leafprismarine-paperclip-1.19.2-R0.1-SNAPSHOT-reobf.jar ./leafprismarine-1.19.2.jar
       - name: Upload LeafPrismarine
-        uses: actions/upload-artifact@v
+        uses: actions/upload-artifact@v3
         with:
           name: LeafPrismarine-1.19.2
           path: ./leafprismarine-1.19.2.jar
