--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build LeafGale-1.19.2
+name: Build Leaf-1.19.2
 on: [ push, pull_request ]
 jobs:
   build:
@@ -20,9 +20,9 @@ jobs:
       - name: Create ReobfPaperclipJar
         run: ./gradlew createReobfPaperclipJar --stacktrace
       - name: Rename Paperclip Jar
-        run: mv build/libs/leaf-paperclip-1.19.2-R0.1-SNAPSHOT-reobf.jar ./leafgale-1.19.2.jar
+        run: mv build/libs/leaf-paperclip-1.19.2-R0.1-SNAPSHOT-reobf.jar ./leaf-1.19.2.jar
       - name: Upload LeafGale
         uses: actions/upload-artifact@v3
         with:
-          name: LeafGale
-          path: ./leafgale-1.19.2.jar
+          name: Leaf
+          path: ./leaf-1.19.2.jar
