--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build Leaf-1.19.2
+name: Build Leaf 1.19.2
 on: [ push, pull_request ]
 jobs:
   build:
@@ -21,7 +21,7 @@ jobs:
         run: ./gradlew createReobfPaperclipJar --stacktrace
       - name: Rename Paperclip Jar
         run: mv build/libs/leaf-paperclip-1.19.2-R0.1-SNAPSHOT-reobf.jar ./leaf-1.19.2.jar
-      - name: Upload LeafGale
+      - name: Upload Leaf
         uses: actions/upload-artifact@v3
         with:
           name: Leaf
