Refactor: Use Mirai & Updated dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group = org.dreeam.leaf
 version = 1.18.2-R0.1-SNAPSHOT
 
-PaperCommit = fc9ee65a32622d03a91db39364b6f106cf88335b
+MiraiCommit = f848d6ef91ad15153aa3dbb26355deb92cb6eda3
 
 org.gradle.caching = true
 org.gradle.parallel = true
