Refactor: Change upstream to pufferfish

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group = org.dreeam.leaf
 version = 1.19.2-R0.1-SNAPSHOT
 
-GaleCommit = c171237448de714f1679ca90e93fa34b2de7a65d
+PufferfishCommit = 9b8cdc74a4bed029a68682a6f0b6ec039b5c2707
 
 org.gradle.caching = true
 org.gradle.parallel = true
