--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,59 @@
-.gradle
-/build/
+# JVM crash related
+core.*
+hs_err_pid*
 
-# Ignore Gradle GUI config
-gradle-app.setting
+# Intellij
+.idea/
+*.iml
+*.ipr
+*.iws
+out/
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+# Eclipse
+.classpath
+.project
+.settings/
+
+# netbeans
+nbproject/
+nbactions.xml
+
+# Gradle
 !gradle-wrapper.jar
+.gradle/
+build/
+*/build/
 
-# Cache of project
-.gradletasknamecache
+# we use maven!
+build.xml
 
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
+# Maven
+log/
+target/
+dependency-reduced-pom.xml
+
+# various other potential build files
+build/
+bin/
+dist/
+manifest.mf
+
+# Mac
+.DS_Store/
+.DS_Store
+
+# vim
+.*.sw[a-p]
+
+# Linux temp files
+*~
+
+# other stuff
+run/
+
+build-data/
+Leaf-API
+Leaf-MojangAPI
+Leaf-Server
+*.jar
+/patches/todo/
