Refactor: Change upstream to Gale

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group = org.dreeam.leaf
 version = 1.19.3-R0.1-SNAPSHOT
 
-PufferfishCommit = 9771bd7e692b5f4133e5846123c2f3a9c315e75f
+GaleCommit = a455701b06f429147d8e178b5d2b6bca6c65508f
 
 org.gradle.caching = true
 org.gradle.parallel = true
