Refactor: Change upstream to Pufferfish (again)

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group = org.dreeam.leaf
 version = 1.19.3-R0.1-SNAPSHOT
 
-GaleCommit = 9eec5eae111108ca5cd2ad7bfb562a11a15353b9
+PufferfishCommit = 15538a9d3c71687c733c4c6dd94f4b9855917401
 
 org.gradle.caching = true
 org.gradle.parallel = true
