Add auto release

--- a/.github/workflows/ver1193.yml
+++ b/.github/workflows/ver1193.yml
@@ -28,3 +28,11 @@ jobs:
         with:
           name: Leaf
           path: ./leaf-1.19.3.jar
+      - name: Release Artifacts
+        uses: marvinpinto/action-automatic-releases@latest
+        with:
+          title: "Leaf 1.19.3"
+          automatic_release_tag: "ver-1.19.3"
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          files: "./leaf-1.19.3.jar"
+          prerelease: false
