--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group = org.dreeam.leaf
 version = 1.19.3-R0.1-SNAPSHOT
 
-pufferfishCommit = 315157103cc37bf5381cbd19ab43db7f19e6b347
+galeCommit = f1503a7be737f1d0c2da33b3138dad4e786541a3
 
 org.gradle.caching = true
 org.gradle.parallel = true
