--- a/.github/workflows/Mirai-1192.yml
+++ b/.github/workflows/Mirai-1192.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: gradle/wrapper-validation-action@master
+      - uses: gradle/wrapper-validation-action@main
       - uses: actions/setup-java@v3
         with:
           distribution: temurin
