--- a/.github/workflows/ver1193.yml
+++ b/.github/workflows/ver1193.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: gradle/wrapper-validation-action@master
+      - uses: gradle/wrapper-validation-action@main
       - name: Set up JDK
         uses: graalvm/setup-graalvm@v1
         with:
