--- a/.github/workflows/purpur1193.yml
+++ b/.github/workflows/purpur1193.yml
@@ -1,4 +1,4 @@
-name: Build Leaf 1.19.3
+name: Build LeafPurpur 1.19.3
 on: [ push, pull_request ]
 jobs:
   build:
@@ -22,7 +22,7 @@ jobs:
       - name: Create ReobfPaperclipJar
         run: ./gradlew -Dorg.gradle.jvmargs="-Dgraal.CompilerConfiguration=enterprise -Dgraal.UsePriorityInlining=true -Dgraal.Vectorization=true -Dgraal.OptDuplication=true --add-modules jdk.incubator.vector" createReobfPaperclipJar --stacktrace --no-daemon
       - name: Rename Paperclip Jar
-        run: mv build/libs/leaf-paperclip-1.19.3-R0.1-SNAPSHOT-reobf.jar ./leaf-1.19.3.jar
+        run: mv build/libs/leaf-paperclip-1.19.3-R0.1-SNAPSHOT-reobf.jar ./leafpurpur-1.19.3.jar
       - name: Upload Leaf
         uses: actions/upload-artifact@v3
         with:
@@ -31,8 +31,8 @@ jobs:
       - name: Release Artifacts
         uses: marvinpinto/action-automatic-releases@latest
         with:
-          title: "Leaf 1.19.3"
-          automatic_release_tag: "ver-1.19.3"
+          title: "LeafPurpur 1.19.3"
+          automatic_release_tag: "purpur-1.19.3"
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          files: "./leaf-1.19.3.jar"
+          files: "./leafpurpur-1.19.3.jar"
           prerelease: false
