--- a/.github/workflows/build-1194.yml
+++ b/.github/workflows/build-1194.yml
@@ -1,4 +1,4 @@
-name: Build Leaf 1.19.3
+name: Build Leaf 1.19.4
 on: [ push, pull_request ]
 jobs:
   build:
@@ -9,7 +9,7 @@ jobs:
       - name: Set up JDK
         uses: graalvm/setup-graalvm@v1
         with:
-          version: "latest"
+          version: latest
           java-version: 19
           github-token: "${{ secrets.GITHUB_TOKEN }}"
           cache: gradle
@@ -22,17 +22,18 @@ jobs:
       - name: Create ReobfPaperclipJar
         run: ./gradlew -Dorg.gradle.jvmargs="-Dgraal.CompilerConfiguration=enterprise -Dgraal.UsePriorityInlining=true -Dgraal.Vectorization=true -Dgraal.OptDuplication=true --add-modules jdk.incubator.vector" createReobfPaperclipJar --stacktrace --no-daemon
       - name: Rename Paperclip Jar
-        run: mv build/libs/leaf-paperclip-1.19.3-R0.1-SNAPSHOT-reobf.jar ./leaf-1.19.3.jar
+        run: mv build/libs/leaf-paperclip-1.19.4-R0.1-SNAPSHOT-reobf.jar ./leaf-1.19.4.jar
       - name: Upload Leaf
         uses: actions/upload-artifact@v3
         with:
           name: Leaf
-          path: ./leaf-1.19.3.jar
+          path: ./leaf-1.19.4.jar
       - name: Release Artifacts
+        if: github.ref_name == 'ver/1.19.4'
         uses: marvinpinto/action-automatic-releases@latest
         with:
-          title: "Leaf 1.19.3"
-          automatic_release_tag: "ver-1.19.3"
+          title: "Leaf 1.19.4"
+          automatic_release_tag: "ver-1.19.4"
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          files: "./leaf-1.19.3.jar"
+          files: "./leaf-1.19.4.jar"
           prerelease: false
