--- a/.github/workflows/build-1194.yml
+++ b/.github/workflows/build-1194.yml
@@ -7,9 +7,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: gradle/wrapper-validation-action@main
       - name: Set up JDK
-        uses: graalvm/setup-graalvm@v1
+        uses: graalvm/setup-graalvm@main
         with:
-          version: latest
+          version: 22.3.1
           java-version: 19
           github-token: "${{ secrets.GITHUB_TOKEN }}"
           cache: gradle
