Update release action of workflow

--- a/.github/workflows/build-1194.yml
+++ b/.github/workflows/build-1194.yml
@@ -28,12 +28,12 @@ jobs:
         with:
           name: Leaf
           path: ./leaf-1.19.4.jar
-      - name: Release Artifacts
+      - name: Release Leaf
         if: github.ref_name == 'ver/1.19.4'
-        uses: marvinpinto/action-automatic-releases@latest
+        uses: softprops/action-gh-release@master
         with:
-          title: "Leaf 1.19.4"
-          automatic_release_tag: "ver-1.19.4"
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          name: "Leaf 1.19.4"
+          tag_name: "ver-1.19.4"
+          token: "${{ secrets.GITHUB_TOKEN }}"
           files: "./leaf-1.19.4.jar"
           prerelease: false
