Use old action release

--- a/.github/workflows/build-120.yml
+++ b/.github/workflows/build-120.yml
@@ -30,10 +30,10 @@ jobs:
           path: ./leaf-1.20.jar
       - name: Release Leaf
         if: github.ref_name == 'ver/1.20'
-        uses: softprops/action-gh-release@master
+        uses: marvinpinto/action-automatic-releases@latest
         with:
-          name: "Leaf 1.20"
-          tag_name: "ver-1.20"
-          token: "${{ secrets.GITHUB_TOKEN }}"
+          title: "Leaf 1.20"
+          automatic_release_tag: "ver-1.20"
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
           files: "./leaf-1.20.jar"
           prerelease: false
