--- a/.github/workflows/build-1201.yml
+++ b/.github/workflows/build-1201.yml
@@ -1,4 +1,4 @@
-name: Build Leaf 1.20
+name: Build Leaf 1.20.1
 on: [ push, pull_request ]
 jobs:
   build:
@@ -9,8 +9,8 @@ jobs:
       - name: Set up JDK
         uses: graalvm/setup-graalvm@main
         with:
-          version: 22.3.1
-          java-version: 19
+          version: latest
+          java-version: 20
           github-token: "${{ secrets.GITHUB_TOKEN }}"
           cache: gradle
       - name: Grant execute permission for gradlew
@@ -22,18 +22,18 @@ jobs:
       - name: Create ReobfPaperclipJar
         run: ./gradlew -Dorg.gradle.jvmargs="-Dgraal.CompilerConfiguration=enterprise -Dgraal.UsePriorityInlining=true -Dgraal.Vectorization=true -Dgraal.OptDuplication=true --add-modules jdk.incubator.vector" createReobfPaperclipJar --stacktrace --no-daemon
       - name: Rename Paperclip Jar
-        run: mv build/libs/leaf-paperclip-1.20-R0.1-SNAPSHOT-reobf.jar ./leaf-1.20.jar
+        run: mv build/libs/leaf-paperclip-1.20.1-R0.1-SNAPSHOT-reobf.jar ./leaf-1.20.1.jar
       - name: Upload Leaf
         uses: actions/upload-artifact@v3
         with:
           name: Leaf
-          path: ./leaf-1.20.jar
+          path: ./leaf-1.20.1.jar
       - name: Release Leaf
-        if: github.ref_name == 'ver/1.20'
+        if: github.ref_name == 'ver/1.20.1'
         uses: marvinpinto/action-automatic-releases@latest
         with:
-          title: "Leaf 1.20"
-          automatic_release_tag: "ver-1.20"
+          title: "Leaf 1.20.1"
+          automatic_release_tag: "ver-1.20.1"
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          files: "./leaf-1.20.jar"
+          files: "./leaf-1.20.1.jar"
           prerelease: false
