--- a/.github/workflows/build-1201.yml
+++ b/.github/workflows/build-1201.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Set up JDK
         uses: graalvm/setup-graalvm@main
         with:
-          version: latest
+          version: "dev"
           java-version: 20
           github-token: "${{ secrets.GITHUB_TOKEN }}"
           cache: gradle
