Updated Upstream (Gale/Paper/Purpur/Leaves/Dependencies)

--- a/.github/workflows/build-1202.yml
+++ b/.github/workflows/build-1202.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@main
       - uses: gradle/wrapper-validation-action@main
       - name: Set up JDK
         uses: graalvm/setup-graalvm@main
@@ -23,13 +23,13 @@ jobs:
       - name: Rename Paperclip Jar
         run: mv build/libs/Leaf-paperclip-1.20.2-R0.1-SNAPSHOT-reobf.jar ./leaf-1.20.2.jar
       - name: Upload Leaf
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@main
         with:
           name: Leaf
           path: ./leaf-1.20.2.jar
       - name: Release Leaf
         if: github.ref_name == 'ver/1.20.2'
-        uses: marvinpinto/action-automatic-releases@latest
+        uses: marvinpinto/action-automatic-releases@master
         with:
           title: "Leaf 1.20.2"
           automatic_release_tag: "ver-1.20.2"
