Updated Upstream (Leaf)

--- a/.github/workflows/build-1201.yml
+++ b/.github/workflows/build-1201.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@main
       - uses: gradle/wrapper-validation-action@main
       - name: Set up JDK
         uses: graalvm/setup-graalvm@main
@@ -12,24 +12,23 @@ jobs:
           java-version: 17
           github-token: "${{ secrets.GITHUB_TOKEN }}"
           cache: gradle
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Configure Git
         run: git config --global user.email "no-reply@github.com" && git config --global user.name "Github Actions"
+
       - name: Apply patches
         run: ./gradlew -Dorg.gradle.jvmargs="-Dgraal.CompilerConfiguration=enterprise -Dgraal.UsePriorityInlining=true -Dgraal.Vectorization=true -Dgraal.OptDuplication=true --add-modules jdk.incubator.vector" applyPatches --stacktrace --no-daemon
       - name: Create ReobfPaperclipJar
         run: ./gradlew -Dorg.gradle.jvmargs="-Dgraal.CompilerConfiguration=enterprise -Dgraal.UsePriorityInlining=true -Dgraal.Vectorization=true -Dgraal.OptDuplication=true --add-modules jdk.incubator.vector" createReobfPaperclipJar --stacktrace --no-daemon
+
       - name: Rename Paperclip Jar
         run: mv build/libs/Leaf-paperclip-1.20.1-R0.1-SNAPSHOT-reobf.jar ./leaf-1.20.1.jar
-      - name: Upload Leaf
-        uses: actions/upload-artifact@v3
-        with:
-          name: Leaf
-          path: ./leaf-1.20.1.jar
+
       - name: Release Leaf
         if: github.ref_name == 'ver/1.20.1'
-        uses: marvinpinto/action-automatic-releases@latest
+        uses: marvinpinto/action-automatic-releases@master
         with:
           title: "Leaf 1.20.1"
           automatic_release_tag: "ver-1.20.1"
