--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -21,19 +21,19 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
      
       - name: Get Gale Latest Commit Hash
-        id: galeRef
+        id: galeCommit
         run: |
           ls
           cd Gale
-          echo "::set-output name=galeRef::$(git rev-parse HEAD)"
+          echo "::set-output name=galeCommit::$(git rev-parse HEAD)"
           cd ..
          
-      - name: Update galeRef in Leaf 
+      - name: Update galeCommit in Leaf 
         run: |
           cd Leaf
-          sed -i "s/\(galeRef\s*=\s*\).*/\1$PAPER_REF/" gradle.properties
+          sed -i "s/\(galeCommit\s*=\s*\).*/\1$PAPER_REF/" gradle.properties
         env:
-          PAPER_REF: ${{ steps.galeRef.outputs.galeRef }}
+          PAPER_REF: ${{ steps.galeCommit.outputs.galeCommit }}
       - name: Check for changes and Write to repository
         run: |
           cd Leaf
