--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: 'Gale'
-          repository: "GaleMC/Gale"
+          repository: "Dreeam-qwq/Gale"
           token: ${{ secrets.GITHUB_TOKEN }}
      
       - name: Get Gale Latest Commit Hash
