--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -39,8 +39,8 @@ jobs:
           cd Leaf
           if ! git diff --quiet; then
             git add gradle.properties
-            git config user.name "HaHaWTH"
-            git config user.email HaHaWTH@users.noreply.github.com
+            git config --global user.name "Github Actions"
+            git config --global user.email no-reply@github.com
             git commit -m "Updated Upstream (Gale)"
             git push
           else
