--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -39,7 +39,7 @@ jobs:
           cd Leaf
           if ! git diff --quiet; then
             git add gradle.properties
-            git config --global user.name "Github Actions"
+            git config --global user.name "github-actions"
             git config --global user.email no-reply@github.com
             git commit -m "Updated Upstream (Gale)"
             git push
