--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -38,6 +38,9 @@ jobs:
         run: |
           cd Leaf
           if ! git diff --quiet; then
+            echo "Running tests...."
+            ./gradlew applyPatches && ./gradlew createReobfPaperclipJar
+            echo "Writing to repo....."
             git add gradle.properties
             git config --global user.name "github-actions"
             git config --global user.email no-reply@github.com
