--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -34,12 +34,21 @@ jobs:
           sed -i "s/\(galeCommit\s*=\s*\).*/\1$PAPER_REF/" gradle.properties
         env:
           PAPER_REF: ${{ steps.galeCommit.outputs.galeCommit }}
-      - name: Check for changes and Write to repository
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+        
+      - name: Running tests before push
         run: |
           cd Leaf
           if ! git diff --quiet; then
             echo "Running tests...."
             ./gradlew applyPatches && ./gradlew createReobfPaperclipJar
+          fi
+          
+      - name: Check for changes and Write to repository
+        run: |
+          cd Leaf
+          if ! git diff --quiet; then
             echo "Writing to repo....."
             git add gradle.properties
             git config --global user.name "github-actions"
