--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -35,7 +35,7 @@ jobs:
         env:
           PAPER_REF: ${{ steps.galeCommit.outputs.galeCommit }}
       - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+        run: chmod +x ./gradlew
         
       - name: Running tests before push
         run: |
