--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -44,10 +44,16 @@ jobs:
           cd Leaf
           if ! git diff --quiet; then
             echo "Running tests...."
-            ./gradlew applyPatches && ./gradlew createReobfPaperclipJar
+            ./gradlew applyPatches || export TEST_FAILED=true
+            ./gradlew createReobfPaperclipJar || export TEST_FAILED=true
           fi
-          
+      
+      - name: Continue on test failure
+        if: env.TEST_FAILED == 'true'
+        run: echo "Tests failed but continuing..."
+      
       - name: Check for changes and Write to repository
+        if: env.TEST_FAILED != 'true'
         run: |
           cd Leaf
           if ! git diff --quiet; then
