--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -49,11 +49,11 @@ jobs:
           fi
       
       - name: Continue on test failure
-        if: env.TEST_FAILED == 'true'
+        if: env.TEST_FAILED == true
         run: echo "Tests failed but continuing..."
       
       - name: Check for changes and Write to repository
-        if: env.TEST_FAILED != 'true'
+        if: env.TEST_FAILED != true
         run: |
           cd Leaf
           if ! git diff --quiet; then
