--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -47,7 +47,11 @@ jobs:
             ./gradlew applyPatches || export TEST_FAILED=true
             ./gradlew createReobfPaperclipJar || export TEST_FAILED=true
           fi
-      
+          
+      - name: Set TEST_FAILED variable
+        run: |
+          echo "export TEST_FAILED=${TEST_FAILED}" >> $GITHUB_ENV
+          
       - name: Continue on test failure
         if: env.TEST_FAILED == true
         run: echo "Tests failed but continuing..."
