--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -51,22 +51,19 @@ jobs:
       - name: Set TEST_FAILED variable
         run: |
           echo "export TEST_FAILED=${TEST_FAILED}" >> $GITHUB_ENV
-          
-      - name: Continue on test failure
-        if: env.TEST_FAILED == true
-        run: echo "Tests failed but continuing..."
       
       - name: Check for changes and Write to repository
-        if: env.TEST_FAILED != true
         run: |
-          cd Leaf
-          if ! git diff --quiet; then
-            echo "Writing to repo....."
-            git add gradle.properties
-            git config --global user.name "github-actions"
-            git config --global user.email no-reply@github.com
-            git commit -m "Updated Upstream (Gale)"
-            git push
-          else
-            echo "No changes to commit."
+          if env.TEST_FAILED != true;then
+            cd Leaf
+            if ! git diff --quiet; then
+              echo "Writing to repo....."
+              git add gradle.properties
+              git config --global user.name "github-actions"
+              git config --global user.email no-reply@github.com
+              git commit -m "Updated Upstream (Gale)"
+              git push
+            else
+              echo "No changes to commit."
+            fi
           fi
