--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -54,7 +54,7 @@ jobs:
       
       - name: Check for changes and Write to repository
         run: |
-          if env.TEST_FAILED != true;then
+          if ${{ env.TEST_FAILED }} != true;then
             cd Leaf
             if ! git diff --quiet; then
               echo "Writing to repo....."
