--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -34,6 +34,7 @@ jobs:
           sed -i "s/\(galeCommit\s*=\s*\).*/\1$PAPER_REF/" gradle.properties
         env:
           PAPER_REF: ${{ steps.galeCommit.outputs.galeCommit }}
+          
       - name: Grant execute permission for gradlew
         run: |
           cd Leaf
@@ -44,26 +45,20 @@ jobs:
           cd Leaf
           if ! git diff --quiet; then
             echo "Running tests...."
-            ./gradlew applyPatches || export TEST_FAILED=true
-            ./gradlew createReobfPaperclipJar || export TEST_FAILED=true
+            ./gradlew applyPatches
+            ./gradlew createReobfPaperclipJar
           fi
           
-      - name: Set TEST_FAILED variable
-        run: |
-          echo "export TEST_FAILED=${TEST_FAILED}" >> $GITHUB_ENV
-      
       - name: Check for changes and Write to repository
         run: |
-          if ${{ env.TEST_FAILED }} != true;then
-            cd Leaf
-            if ! git diff --quiet; then
-              echo "Writing to repo....."
-              git add gradle.properties
-              git config --global user.name "github-actions"
-              git config --global user.email no-reply@github.com
-              git commit -m "Updated Upstream (Gale)"
-              git push
-            else
-              echo "No changes to commit."
-            fi
+          cd Leaf
+          if ! git diff --quiet; then
+            echo "Writing to repo....."
+            git add gradle.properties
+            git config --global user.name "github-actions"
+            git config --global user.email no-reply@github.com
+            git commit -m "Updated Upstream (Gale)"
+            git push
+          else
+            echo "No changes to commit."
           fi
