--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -47,6 +47,8 @@ jobs:
           cd Leaf
           if ! git diff --quiet; then
             echo "Running tests...."
+            git config --global user.name "github-actions"
+            git config --global user.email no-reply@github.com
             ./gradlew applyPatches
             ./gradlew createReobfPaperclipJar
           fi
