[ci skip] Fix auto-update

--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -58,8 +58,7 @@ jobs:
           cd Leaf
           if ! git diff --quiet; then
             echo "Writing to repo....."
-            git add gradle.properties
-            git add patches/*
+            git add .
             git commit -m "Updated Upstream (Gale)"
             git push
           else
