Updated Upstream (Gale/Purpur/Dependencies)

--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -10,13 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Leaf repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@main
         with:
           path: 'Leaf'
           token: ${{ secrets.GITHUB_TOKEN }}
        
       - name: Checkout Gale repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@main
         with:
           path: 'Gale'
           repository: "Dreeam-qwq/Gale"
