--- a/.github/workflows/build-1204.yml
+++ b/.github/workflows/build-1204.yml
@@ -24,10 +24,16 @@ jobs:
         run: ./gradlew -Dorg.gradle.jvmargs="-Dgraal.CompilerConfiguration=enterprise -Dgraal.UsePriorityInlining=true -Dgraal.Vectorization=true -Dgraal.OptDuplication=true --add-modules jdk.incubator.vector" createReobfPaperclipJar --stacktrace --no-daemon
 
       - name: Rename Paperclip Jar
-        run: mv build/libs/Leaf-paperclip-1.20.4-R0.1-SNAPSHOT-reobf.jar ./leaf-1.20.4.jar
+        run: mv build/libs/leaf-paperclip-1.20.4-R0.1-SNAPSHOT-reobf.jar ./leaf-1.20.4.jar
+
+      - name: Upload Leaf
+        uses: actions/upload-artifact@main
+        with:
+          name: Leaf 1.20.4
+          path: ./leaf-1.20.4.jar
 
       - name: Release Leaf
-        if: github.ref_name == 'ver/1.20.4'
+        if: github.ref_name == 'ver/1.20.4' && contains(github.event.commits[0].message, '[Release]')
         uses: marvinpinto/action-automatic-releases@master
         with:
           title: "Leaf 1.20.4"
