Updated Upstream (Gale/Purpur)

--- a/.gitignore
+++ b/.gitignore
@@ -2,58 +2,32 @@
 core.*
 hs_err_pid*
 
-# Intellij
-.idea/
-*.iml
-*.ipr
-*.iws
-out/
-
-# Eclipse
-.classpath
-.project
-.settings/
-
-# netbeans
-nbproject/
-nbactions.xml
-
-# Gradle
-!gradle-wrapper.jar
-.gradle/
-build/
-*/build/
-
-# we use maven!
-build.xml
-
-# Maven
-log/
-target/
-dependency-reduced-pom.xml
-
-# various other potential build files
-build/
-bin/
-dist/
-manifest.mf
+# vim
+.*.sw[a-p]
 
 # Mac
 .DS_Store/
 .DS_Store
 
-# vim
-.*.sw[a-p]
-
 # Linux temp files
 *~
 
-# other stuff
-run/
+# Intellij
+.idea
+*.iml
 
-build-data/
+# Gradle
+!gradle/wrapper/gradle-wrapper.jar
+.gradle
+build
+
+# Leaf
+build-data
+run
+
 Leaf-API
 Leaf-MojangAPI
 Leaf-Server
-*.jar
-/patches/todo/
+paper-api-generator
+
+patches/todo
