[ci skip] Update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,13 @@
-# JVM crash related
-core.*
-hs_err_pid*
-
-# vim
-.*.sw[a-p]
-
-# Mac
+# Mac filesystem dust
 .DS_Store/
 .DS_Store
 
 # Linux temp files
 *~
 
-# Intellij
-.idea
+# IntelliJ
 *.iml
+.idea
 
 # Gradle
 !gradle/wrapper/gradle-wrapper.jar
@@ -23,11 +16,10 @@ build
 
 # Leaf
 build-data
+patches/todo
 run
 
 Leaf-API
 Leaf-MojangAPI
 Leaf-Server
 paper-api-generator
-
-patches/todo
