--- a/.github/workflows/pr-1204.yml
+++ b/.github/workflows/pr-1204.yml
@@ -1,7 +1,7 @@
-name: Build Leaf 1.20.4
+name: Build Leaf 1.20.4 - Pull Request
 
 on:
-  push:
+  pull_request:
     branches: [ "ver/1.20.4" ]
 
 jobs:
@@ -30,26 +30,8 @@ jobs:
       - name: Rename Paperclip Jar
         run: mv build/libs/leaf-paperclip-1.20.4-R0.1-SNAPSHOT-reobf.jar ./leaf-1.20.4.jar
 
-      - name: Publish API
-        run: |
-          echo "GITHUB_USERNAME=Leaf" >> $GITHUB_ENV
-          export GITHUB_USERNAME=Leaf
-          echo "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
-          export GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
-          ./gradlew :leaf-api:publish
-
       - name: Upload Leaf
         uses: actions/upload-artifact@main
         with:
           name: Leaf 1.20.4
           path: ./leaf-1.20.4.jar
-
-      - name: Release Leaf
-        if: contains(github.event.commits[0].message, '[Release]')
-        uses: marvinpinto/action-automatic-releases@master
-        with:
-          title: "Leaf 1.20.4"
-          automatic_release_tag: "ver-1.20.4"
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          files: "./leaf-1.20.4.jar"
-          prerelease: false
