--- a/.github/workflows/build-1204.yml
+++ b/.github/workflows/build-1204.yml
@@ -36,7 +36,8 @@ jobs:
           export GITHUB_USERNAME=Leaf
           echo "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
           export GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
-          ./gradlew :leaf-api:publish -PpublishDevBundle=true
+          ./gradlew :leaf-api:publish
+          ./gradlew publishDevBundlePublicationToMavenLocal -PpublishDevBundle=true
 
       - name: Upload Leaf
         uses: actions/upload-artifact@main
