--- a/.github/workflows/build-1204.yml
+++ b/.github/workflows/build-1204.yml
@@ -3,6 +3,8 @@ name: Build Leaf 1.20.4
 on:
   push:
     branches: [ "ver/1.20.4" ]
+  pull_request:
+    branches: [ "ver/1.20.4" ]
 
 jobs:
   build:
@@ -31,6 +33,7 @@ jobs:
         run: mv build/libs/leaf-paperclip-1.20.4-R0.1-SNAPSHOT-reobf.jar ./leaf-1.20.4.jar
 
       - name: Publish API
+        if: github.event_name != 'pull_request'
         run: |
           echo "GITHUB_USERNAME=Leaf" >> $GITHUB_ENV
           export GITHUB_USERNAME=Leaf
@@ -46,7 +49,7 @@ jobs:
           path: ./leaf-1.20.4.jar
 
       - name: Release Leaf
-        if: contains(github.event.commits[0].message, '[Release]')
+        if: github.event_name != 'pull_request'
         uses: marvinpinto/action-automatic-releases@master
         with:
           title: "Leaf 1.20.4"
