Ability to use Virtual Thread for async scheduler

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,4 +6,4 @@ galeCommit = 377da10d2e1fdd3d1bbba68813dd1996dcdbfd09
 org.gradle.caching = true
 org.gradle.parallel = true
 org.gradle.vfs.watch = false
-org.gradle.jvmargs = -Xmx4G
+org.gradle.jvmargs = -Xmx4G -Dfile.encoding=UTF8
