--- a/.github/workflows/build-1205.yml
+++ b/.github/workflows/build-1205.yml
@@ -1,10 +1,10 @@
-name: Build Leaf 1.20.4
+name: Build Leaf 1.20.5
 
 on:
   push:
-    branches: [ "ver/1.20.4" ]
+    branches: [ "ver/1.20.5" ]
   pull_request:
-    branches: [ "ver/1.20.4" ]
+    branches: [ "ver/1.20.5" ]
 
 jobs:
   build:
@@ -26,11 +26,11 @@ jobs:
 
       - name: Apply patches
         run: ./gradlew -Dorg.gradle.jvmargs="-Dgraal.CompilerConfiguration=enterprise -Dgraal.UsePriorityInlining=true -Dgraal.Vectorization=true -Dgraal.OptDuplication=true --add-modules jdk.incubator.vector" applyPatches --stacktrace --no-daemon
-      - name: Create ReobfPaperclipJar
-        run: ./gradlew -Dorg.gradle.jvmargs="-Dgraal.CompilerConfiguration=enterprise -Dgraal.UsePriorityInlining=true -Dgraal.Vectorization=true -Dgraal.OptDuplication=true --add-modules jdk.incubator.vector" createReobfPaperclipJar --stacktrace --no-daemon
+      - name: Create MojmapPaperclipJar
+        run: ./gradlew -Dorg.gradle.jvmargs="-Dgraal.CompilerConfiguration=enterprise -Dgraal.UsePriorityInlining=true -Dgraal.Vectorization=true -Dgraal.OptDuplication=true --add-modules jdk.incubator.vector" createMojmapPaperclipJar --stacktrace --no-daemon
 
       - name: Rename Paperclip Jar
-        run: mv build/libs/leaf-paperclip-1.20.4-R0.1-SNAPSHOT-reobf.jar ./leaf-1.20.4.jar
+        run: mv build/libs/leaf-paperclip-1.20.5-R0.1-SNAPSHOT-mojmap.jar ./leaf-1.20.5.jar
 
       - name: Publish API
         if: github.event_name != 'pull_request'
@@ -45,15 +45,15 @@ jobs:
       - name: Upload Leaf
         uses: actions/upload-artifact@main
         with:
-          name: Leaf 1.20.4
-          path: ./leaf-1.20.4.jar
+          name: Leaf 1.20.5
+          path: ./leaf-1.20.5.jar
 
       - name: Release Leaf
         if: github.event_name != 'pull_request'
         uses: marvinpinto/action-automatic-releases@master
         with:
-          title: "Leaf 1.20.4"
-          automatic_release_tag: "ver-1.20.4"
+          title: "Leaf 1.20.5"
+          automatic_release_tag: "ver-1.20.5"
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          files: "./leaf-1.20.4.jar"
+          files: "./leaf-1.20.5.jar"
           prerelease: false
