Also build reobf jar

--- a/.github/workflows/build-1206.yml
+++ b/.github/workflows/build-1206.yml
@@ -28,9 +28,13 @@ jobs:
         run: ./gradlew -Dorg.gradle.jvmargs="-Dgraal.CompilerConfiguration=enterprise -Dgraal.UsePriorityInlining=true -Dgraal.Vectorization=true -Dgraal.OptDuplication=true --add-modules jdk.incubator.vector" applyPatches --stacktrace --no-daemon
       - name: Create MojmapPaperclipJar
         run: ./gradlew -Dorg.gradle.jvmargs="-Dgraal.CompilerConfiguration=enterprise -Dgraal.UsePriorityInlining=true -Dgraal.Vectorization=true -Dgraal.OptDuplication=true --add-modules jdk.incubator.vector" createMojmapPaperclipJar --stacktrace --no-daemon
+      - name: Create createReobfPaperclipJar
+        run: ./gradlew -Dorg.gradle.jvmargs="-Dgraal.CompilerConfiguration=enterprise -Dgraal.UsePriorityInlining=true -Dgraal.Vectorization=true -Dgraal.OptDuplication=true --add-modules jdk.incubator.vector" createReobfPaperclipJar --stacktrace --no-daemon
 
       - name: Rename Paperclip Jar
-        run: mv build/libs/leaf-paperclip-1.20.6-R0.1-SNAPSHOT-mojmap.jar ./leaf-1.20.6.jar
+        run: |
+          mv build/libs/leaf-paperclip-1.20.6-R0.1-SNAPSHOT-mojmap.jar ./leaf-1.20.6-mojmap.jar
+          mv build/libs/leaf-paperclip-1.20.6-R0.1-SNAPSHOT-reobf.jar ./leaf-1.20.6-reobf.jar
 
       - name: Publish API
         if: github.event_name != 'pull_request'
@@ -46,7 +50,7 @@ jobs:
         uses: actions/upload-artifact@main
         with:
           name: Leaf 1.20.6
-          path: ./leaf-1.20.6.jar
+          path: ./leaf-1.20.6-*.jar
 
       - name: Release Leaf
         if: github.event_name != 'pull_request'
@@ -55,5 +59,5 @@ jobs:
           title: "Leaf 1.20.6"
           automatic_release_tag: "ver-1.20.6"
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          files: "./leaf-1.20.6.jar"
+          files: "./leaf-1.20.6-*.jar"
           prerelease: false
