[ci skip] Update API publish work

--- a/.github/workflows/build-1206.yml
+++ b/.github/workflows/build-1206.yml
@@ -36,15 +36,14 @@ jobs:
           mv build/libs/leaf-paperclip-1.20.6-R0.1-SNAPSHOT-mojmap.jar ./leaf-1.20.6-mojmap.jar
           mv build/libs/leaf-paperclip-1.20.6-R0.1-SNAPSHOT-reobf.jar ./leaf-1.20.6-reobf.jar
 
-      - name: Publish API
-        if: github.event_name != 'pull_request'
-        run: |
-          echo "GITHUB_USERNAME=Leaf" >> $GITHUB_ENV
-          export GITHUB_USERNAME=Leaf
-          echo "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
-          export GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
-          ./gradlew :leaf-api:publish
-          ./gradlew publishDevBundlePublicationToLeafRepository -PpublishDevBundle=true
+#      - name: Publish API
+#        if: github.event_name != 'pull_request'
+#        run: |
+#          ./gradlew :leaf-api:publish
+#          ./gradlew publishDevBundlePublicationToLeafRepository -PpublishDevBundle=true
+#        env:
+#          ORG_GRADLE_PROJECT_leafUsername: ${{ secrets.REPO_USER }}
+#          ORG_GRADLE_PROJECT_leafPassword: ${{ secrets.REPO_PASSWORD }}
 
       - name: Upload Leaf
         uses: actions/upload-artifact@main
