--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-group = org.dreeam.leaf
+group = cn.dreeam.leaf
 version = 1.20.6-R0.1-SNAPSHOT
 
 galeCommit = 593d73f96816716e0ef7c017140b914bf0c93279
