Update some Leaf server patches

--- a/.github/workflows/build-1201.yml
+++ b/.github/workflows/build-1201.yml
@@ -1,5 +1,9 @@
 name: Build Leaf 1.20.1
-on: [ push, pull_request ]
+
+on:
+  push:
+    branches: [ "ver/1.20.1" ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -26,8 +30,23 @@ jobs:
       - name: Rename Paperclip Jar
         run: mv build/libs/Leaf-paperclip-1.20.1-R0.1-SNAPSHOT-reobf.jar ./leaf-1.20.1.jar
 
+      #      - name: Publish API
+      #        if: github.event_name != 'pull_request'
+      #        run: |
+      #          ./gradlew :leaf-api:publish
+      #          ./gradlew publishDevBundlePublicationToLeafRepository -PpublishDevBundle=true
+      #        env:
+      #          ORG_GRADLE_PROJECT_leafUsername: ${{ secrets.REPO_USER }}
+      #          ORG_GRADLE_PROJECT_leafPassword: ${{ secrets.REPO_PASSWORD }}
+
+      - name: Upload Leaf
+        uses: actions/upload-artifact@main
+        with:
+          name: Leaf 1.20.1
+          path: ./leaf-1.20.1.jar
+
       - name: Release Leaf
-        if: github.ref_name == 'ver/1.20.1'
+        if: github.event_name != 'pull_request'
         uses: marvinpinto/action-automatic-releases@master
         with:
           title: "Leaf 1.20.1"
