--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 group = org.dreeam.leaf
+mcVersion = 1.20.1
 version = 1.20.1-R0.1-SNAPSHOT
 
 galeCommit = 94acff5e6757d9ad569983f3683a8f3b06dcaf57
@@ -6,4 +7,4 @@ galeCommit = 94acff5e6757d9ad569983f3683a8f3b06dcaf57
 org.gradle.caching = true
 org.gradle.parallel = true
 org.gradle.vfs.watch = false
-org.gradle.jvmargs = -Xmx4G
+org.gradle.jvmargs = -Xmx4G -Dfile.encoding=UTF8
