--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 group = org.dreeam.leaf
+mcVersion = 1.20.4
 version = 1.20.4-R0.1-SNAPSHOT
 
 galeCommit = 05f24b652c77b253b1cffef14b21f4fe971a84fa
