Updated Upstream (Gale)

--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -50,7 +50,7 @@ jobs:
           if ! git diff --quiet; then
             echo "Running tests...."
             ./gradlew applyPatches
-            ./gradlew createReobfPaperclipJar
+            ./gradlew createMojmapPaperclipJar
           fi
           
       - name: Check for changes and write to repository
