Fix auto update workflow

--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -43,7 +43,12 @@ jobs:
           git config --global user.email no-reply@github.com
           cd Leaf
           chmod +x gradlew
-        
+
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version:  21
+
       - name: Running tests before push
         run: |
           cd Leaf
