Fix auto upstream workflow
Co-Authored-By: Pascalpex <68245106+pascalpex@users.noreply.github.com>

--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -71,6 +71,7 @@ jobs:
           if ! git diff --quiet; then
             echo "Writing to repo....."
             git add .
+            chmod +x ./scripts/upstreamCommit.sh
             ./scripts/upstreamCommit.sh --gale $CUR_GALE_REF
             git push
           else
