--- a/.github/workflows/build-121.yml
+++ b/.github/workflows/build-121.yml
@@ -36,14 +36,14 @@ jobs:
           mv build/libs/leaf-paperclip-1.21-R0.1-SNAPSHOT-mojmap.jar ./leaf-1.21-mojmap.jar
           mv build/libs/leaf-paperclip-1.21-R0.1-SNAPSHOT-reobf.jar ./leaf-1.21-reobf.jar
 
-#      - name: Publish API
-#        if: github.event_name != 'pull_request'
-#        run: |
-#          ./gradlew :leaf-api:publish
-#          ./gradlew publishDevBundlePublicationToLeafRepository -PpublishDevBundle=true
-#        env:
-#          ORG_GRADLE_PROJECT_leafUsername: ${{ secrets.REPO_USER }}
-#          ORG_GRADLE_PROJECT_leafPassword: ${{ secrets.REPO_PASSWORD }}
+      - name: Publish API
+        if: github.event_name != 'pull_request'
+        run: |
+          ./gradlew :leaf-api:publish
+          ./gradlew publishDevBundlePublicationToLeafRepository -PpublishDevBundle=true
+        env:
+          ORG_GRADLE_PROJECT_leafUsername: ${{ secrets.REPO_USER }}
+          ORG_GRADLE_PROJECT_leafPassword: ${{ secrets.REPO_PASSWORD }}
 
       - name: Upload Leaf
         uses: actions/upload-artifact@main
